<resources>
    <string name="app_name">PEConnect App</string>
    <string name="bnve_maps">PEC Web</string>
    <string name="bnve_keypad">Keypad</string>
    <string name="bnve_sites">Sites</string>
    <string name="bnve_info">Info</string>
    <string name="welcome_note">Welcome to ONE KALIKASAN CONNECT! A project of Environmental Management Bureau of DENR, that aims to protect, restore and enhance environmental quality towards good public health, environmental integrity and economic viability.</string>
    <string name="welcome_video">Welcome Video</string>
    <string name="about_this_app">About This App</string>
    <string name="begin_tour">Begin Tour</string>
    <string name="site_list_menu_1">Ecological Solid Waste Management Act (RA 9003)</string>
    <string name="site_list_menu_2">Fantastik4</string>
    <string name="site_list_menu_3">BASURA KiD</string>
    <string name="site_list_menu_4">Idol ko si Kap!</string>
    <string name="site_list_menu_5">Fantastik4</string>
    <string name="site_list_menu_6">Composting</string>
    <string name="ra_9003_toolbar_title">ESWM OF 2000 (RA 9003)</string>
    <string name="ra_9003_title">Ano ang RA 9003?</string>
    <string name="ra_9003_desc">Ang RA 9003 ay nagsasaad ng mga alintuntunin sa wastong pamamahala ng basura, pagpapalaganap ng kaalaman sa wastong paggamit ng likas-yaman at pagpapatupad ng mga programang nakatuon sa pakikiisa ng bawat mamamayan upang mabawasan ang basurang agad lamang tinatapon. Layunin din nito na maipaliwanag ang benepisyo ng pagkakaroon ng pasilidad sa bawat lugar na maaring pag imbakan ng balik-materyales o lugar para i-proseso ang mga ito.</string>
    <string name="play_video">Play Video</string>
    <string name="next_site">Next Site</string>
    <string name="prev_site">Previous Site</string>
    <string name="ra_9003_content_title_1">Ano ang nilalaman ng RA 9003?</string>
    <string name="ra_9003_content_body_1"><b>&#8226;</b>Responsibilidad ng iba’t-ibang ahensiya ng pamahalaan lokal na gobyerno, komunidad kasama na rito ang mga NGO’s
                    \n\n<b>&#8226;</b>	Pagtatatag ng National Solid Waste Management Commission at ng National Ecology Center
                    \n\n<b>&#8226;</b> Pagpapatupad ng Mandatory Waste Diversion Goal
                    \n\n<b>&#8226;</b> Pagtatatag ng Materials Recovery Facility
                    \n\n<b>&#8226;</b> Pagsasaayos ng mga Tapunan ng Basura</string>
    <string name="ra_9003_content_title_2">Ano ang mga ahensyang kasama sa pagpapatupad ng batas?</string>
    <string name="ra_9003_content_body_2"><b>&#8226;</b>National Solid Waste Management Commission (NSWMC) na binubuo ng 14 na ahensya mula sa gobyerno at 3 naman mula sa pribadong sektor
            \n\n<b>&#8226;</b>	Department of Environment and Natural Resources (DENR)
            \n\n<b>&#8226;</b>	Lokal na Gobyerno (Siyudad at Munisipyo)
            \n\n<b>&#8226;</b>	Department of Education
            \n\n<b>&#8226;</b>	Commision on Higher Education
            \n\n<b>&#8226;</b>	Office of the Press Secretary
            \n\n<b>&#8226;</b>	Kapisanan ng mga Brodkaster ng Pilipinas
            \n\n<b>&#8226;</b>	National Press Club
            \n\n<b>&#8226;</b>	Philippines Press Institute
            \n\n<b>&#8226;</b>	Philippines National Police
            \n\n<b>&#8226;</b>	Department of National Defense
            \n\n<b>&#8226;</b>	Philippines Coast Guard</string>
    <string name="ra_9003_content_title_3">Ang mga bumubuo ng NSWMC</string>
    <string name="ra_9003_content_body_3"><b>&#8226;</b>Department of Environment and Natural Resources
            \n\n<b>&#8226;</b>	Philippine Information Agency
            \n\n<b>&#8226;</b>	Department of Interior and Local Government
            \n\n<b>&#8226;</b>	TESDA
            \n\n<b>&#8226;</b>	Department of Science and Technology
            \n\n<b>&#8226;</b>	Metro Manila Development Authority
            \n\n<b>&#8226;</b>	Department of Public Works and Highways
            \n\n<b>&#8226;</b>	Liga ng mga Probinsya
            \n\n<b>&#8226;</b>	Department of Health
            \n\n<b>&#8226;</b>	Liga ng mga Lungsod
            \n\n<b>&#8226;</b>	Department of Trade and Industry
            \n\n<b>&#8226;</b>	Liga ng mga Munisipyo
            \n\n<b>&#8226;</b>	Department of Agriculture
            \n\n<b>&#8226;</b>	Liga ng mga Barangay</string>
    <string name="ra_9003_content_title_4">Ang RA 9003 ay may ipinapatupad na programa sa Recycling.</string>
    <string name="ra_9003_content_body_4">Ang DENR ay nangagasiwa sa pagbibigay kaalaman at kaukulang pagsasanay sa mga lokal na gobyerno kasama na rito ang iba’t-ibang sangay ng institusyon. Ang ahensya ay gumagawa rin ng mga alituntunin upang maayos na maipatupad ng lokal na pamahalaan ang kanilang tungkulin sa pamayanan. Kung kinakailangan, ginagawad din nito ang mga karampatang parusa sa mga hindi tumutupad sa batas.</string>
    <string name="ra_9003_content_title_5">Ilan sa ipanapatupad na programa:</string>
    <string name="ra_9003_content_body_5"><b>&#8226;</b>	Pagbili ng mga produktong maaaring magamit muli o ma-recycle
            \n\n<b>&#8226;</b>	Pagbabago sa proseso at mga materyales na ginagamit sa paggawa ng produkto
            \n\n<b>&#8226;</b>	Eco-labeling
            \n\n<b>&#8226;</b>	Pagkontrol sa pag-gamit maging ang pag-angkat ng mga produktong mahirap ma-recycle
            \n\n<b>&#8226;</b>	Pagrekober ng mga mareresiklong gamit </string>
    <string name="ra_9003_content_title_6">Ano ang Materials Recovery Facility (MRF)?</string>
    <string name="ra_9003_content_body_6">Ang MRF ay ang pinaglalagakan ng mga nahakot na nabubulok o ma-karbon na parte ng basura upang gawing compost o pataba sa lupa. Dito pansamantalang nilalagay ang mga balikgamit o recyclables na materyales gaya ng papel, plastic, aluminum, maging mga gamit na gulong, atbp. Dito rin isinasagawa ang secondary sorting o ang pagbubukod ng mga materyales na nakolekta mula sa mga pinagmulan nito o sources.</string>
    <string name="ra_9003_content_title_7">Ano ang kinakailangan sa pagpapatupad ngResource Recovery at Segregation?</string>
    <string name="ra_9003_content_body_7"><b>&#8226;</b>	Magkakahiwalay na lalagyan para sa iba’t ibang uri ng basura compostables, recyclables, special wastes at residuals
            \n\n<b>&#8226;</b>	Panatiliin ang naka-schedule na pagkolekta ng mga basura o materyales
            \n\n<b>&#8226;</b>	Pagkakaroon ng bukod na pagsasalansan ng mga materyales
            \n\n<b>&#8226;</b>	Paglalagay ng Materials Recovery Facility (MRF)
            \n\n<b>&#8226;</b>	Alamin ang pagbebentahan o pagdadalhan ng mga balik gamit o recyclables at ng special waste kung meron man
            \n\n<b>&#8226;</b>	Pakikipag-ugnayan sa mga kolektor ng natirang basura</string>
    <string name="ra_9003_content_title_8">Pagpapatupad ng Batas sa mga Lokal na Pamahalaan</string>
    <string name="ra_9003_content_body_8">Ang Provincial SWM Board ang nagsasaayos ng kabuuang programa sa Wastong pamamahala ng basura.
            \n\n\nAng City/Municipal SWM Board naman ang nagpapatupad ng mga batas ukol sa pagbubukod ng basura sa pinagmulan nito, maging ang pagtatatagng mga pasilidad para sa natirang basura at mga special waste.
            \n\n\nAng Barangay SWM Committee ay ang naatasan sa pagtatatag ng MRF para sa mga nabubulok o ma-karbon at pansamantalang lalagyan ng mga balik-gamit na materyales\n\n\n</string>
    <string name="first_floor_map">First Floor Map</string>
    <string name="second_floor_map">Second Floor Map</string>
    <string name="hours_and_admission">Hours and Admission</string>
    <string name="contact_us">Contact Us</string>
    <string name="survey">Survey</string>
    <string name="become_a_member">Join the WAR ON WASTE Movement</string>
    <string name="blog">Blog</string>
    <string name="tickets">Tickets</string>
    <string name="ticket_details"><b>&#8226;</b>	Adults:
            \n\n<b>&#8226;</b>	Seniors (60+):
            \n\n<b>&#8226;</b>	Children (Ages 6-12):
            \n\n<b>&#8226;</b>	Children (5 &amp; Under):
            \n\n<b>&#8226;</b>	Students:</string>
    <string name="address_label">Address:</string>
    <string name="telephone_label">Tel/Fax Number:</string>
    <string name="email_label">Email:</string>
    <string name="follow_on_fb">Facebook</string>
    <string name="follow_on_twitter">Twitter</string>
    <string name="follow_on_youtube">Youtube</string>
    <string name="follow_on_instagram">Instagram</string>
    <string name="survey_question_1">What was the best part of your experience?</string>
    <string name="survey_question_2">How can we improve your next visit?</string>
    <string name="survey_question_3">Comments</string>
    <string name="survey_question_4">May we contact you to follow up on your comments?</string>
    <string name="survey_question_5">Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="thank_you">Thank You!</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="fantastic_4_title_1">Mensahe Mula Sa Ating Mga Bida</string>
    <string name="composting_title_1">Ano ang Composting?</string>
    <string name="composting_body_1">Ang composting ay isang proseso kung saan ang mga nabubulok na basura ay nirerecycle upang gawing fertilizer o pampataba ng mga halaman. Iyo ay isang natural na proseso ng kalikasan na nagaganap sa mga lugar na hindi sementado (tulad sa mga bakanteng lote, sakahan sa probinsya at sa kagubatan).
        \n\nAng pagkompost ng mga nabubulok na basura ay ang wastong pamamaraan ng pagtatapon nito. Ang mga tirang pagkain ay maaaring ipakain sa mga alagang hayop (tulad ng pusa, aso o patabaing baboy) at ang mga hindi maipakain sa mga ito ay dapat na ikompost.
        \n\nAng lupang gawa sa kompost ay masustansya at mainam para sa mga halaman. Hindi sakitin and mga halamang may masustansyang lupa/humus tulad ng kompost. Hindi rin ito nangangailangan ng pesticide at kemikal na fertilizer. Mahal din ang mga produktong ani rito o ang mga tinatawag na organic products.</string>
    <string name="composting_title_2">Paano ba ang Composting</string>
    <string name="composting_title_3">Ang mga sumusunod ay mga bagay na maaaring ikompost.</string>
    <string name="composting_body_3">
        \n\n<b>&#8226;</b> Tirang pagkain at panis na ulam
        \n\n<b>&#8226;</b> Mga lamang loob ng isda, manok at baboy
        \n\n<b>&#8226;</b> Pinagbalatan / Pinagtabasan ng gulay at prutas
        \n\n<b>&#8226;</b> Sirang prutas
        \n\n<b>&#8226;</b> Balat ng itlog
        \n\n<b>&#8226;</b> Bag ng tsaa
        \n\n<b>&#8226;</b> Basang papel/dyaryo/karton at tissue
        \n\n<b>&#8226;</b> Toothpick na na gawa sa kawayan o kahoy
        \n\n<b>&#8226;</b> Cotton buds na gawa sa papel ang tangkay
        \n\n<b>&#8226;</b> Tinadtad na basura galing sa hardin
    </string>
    <string name="composting_title_4">Paalala:</string>
    <string name="composting_body_4">Iwasan ilagay ang mga matagal mabulok tulad ng mga buto ng hayop, malalaking buto ng prutas, balat/shell ng tahong/talaba/tulya, at iba pa.</string>
</resources>