<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/survey"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- question 1 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_question_1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:imeOptions="actionNext"
                android:padding="16dp" />

            <!-- question 2 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/survey_question_2"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:imeOptions="actionNext"
                android:padding="16dp" />

            <!-- question 3 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/survey_question_3"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:imeOptions="actionNext"
                android:padding="16dp" />

            <!-- question 4 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/survey_question_4"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <info.hoang8f.android.segmented.SegmentedGroup
                android:id="@+id/slots_segmented_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:sc_corner_radius="6dp"
                app:sc_tint_color="@color/welcome_button_bg">

                <RadioButton
                    android:id="@+id/rb_yes"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rb_no"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="false"
                    android:text="@string/no" />

            </info.hoang8f.android.segmented.SegmentedGroup>

            <!-- question 5 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/survey_question_5"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_answer_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edit_text_bg"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/welcome_bg_with_radius"
                android:text="@string/save"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>